--- a/3.1_ds_spd.Rmd
+++ b/3.1_ds_spd.Rmd
@@ -46,7 +46,6 @@ function addClassToTitle(containerId, className) {
 </script>
 
 
-
 ```{r}
 # Набор данных: Точность
 df.acc <- read.csv("./data/accuracy_features.csv")
@@ -85,6 +84,21 @@ names(df.spd) <- tolower(names(df.spd))
 ```
 
 ```{r}
+## Данные тестов психодиагностики
+sp_results <- read_xlsx("../../Все тесты/data/results/sp_results_impersonal.xlsx")
+
+df.acc <- merge(df.acc, select(sp_results, userid, gender), by.x = "user_id", by.y = "userid", all.x = T)
+df.acc <- select(df.acc, 1:4, gender, everything())
+df.acc <- df.acc[!is.na(df.acc$gender),]
+df.acc$gender <- factor(df.acc$gender, labels = c("F", "M"))
+
+df.spd <- merge(df.spd, select(sp_results, userid, gender), by.x = "user_id", by.y = "userid", all.x = T)
+df.spd <- select(df.spd, 1:4, gender, everything())
+df.spd <- df.spd[!is.na(df.spd$gender),]
+df.spd$gender <- factor(df.spd$gender, labels = c("F", "M"))
+```
+
+```{r}
 ## Кликеры
 clickers.acc <- df.acc[df.acc$clicked_through_targets > 5 & df.acc$combo_clicked_through_targets > 5, ]
 clickers.spd <- df.spd[df.spd$clicked_through_targets > 5 & df.spd$combo_clicked_through_targets > 5, ]
@@ -92,7 +106,40 @@ clickers <- unique(c(clickers.acc$user_id, clickers.spd$user_id))
 
 df.acc <- df.acc[!df.acc$user_id %in% clickers, ]
 df.spd <- df.spd[!df.spd$user_id %in% clickers, ]
+
+save(clickers.acc, file = "./data/envs/1_desc_stat/clickers.acc.RData")
+save(clickers.spd, file = "./data/envs/1_desc_stat/clickers.spd.RData")
 ```
+
+```{r}
+# # Очень продолжительное выполнение теста
+# longduration.acc <- df.acc[df.acc$time_total %in% boxplot.stats(df.acc$time_total, coef = 1)$out, ]
+# longduration.spd <- df.spd[df.spd$time_total %in% boxplot.stats(df.spd$time_total, coef = 1)$out, ]
+# longduration <- unique(c(longduration.acc$user_id, longduration.spd$user_id))
+# 
+# 
+# df.acc <- df.acc[!df.acc$user_id %in% longduration, ]
+# df.spd <- df.spd[!df.spd$user_id %in% longduration, ]
+
+# save(longduration.acc, file = "./data/envs/1_desc_stat/longduration.acc.RData")
+# save(longduration.spd, file = "./data/envs/1_desc_stat/longduration.spd.RData")
+```
+
+
+```{r}
+# # Парадоксальные
+# paradox.acc <- df.acc[df.acc$corr_sat < 0, ]
+# paradox.spd <- df.spd[df.spd$corr_sat < 0, ]
+# paradox <- unique(c(paradox.acc$user_id, paradox.spd$user_id))
+# 
+# 
+# df.acc <- df.acc[!df.acc$user_id %in% paradox, ]
+# df.spd <- df.spd[!df.spd$user_id %in% paradox, ]
+
+# save(paradox.acc, file = "./data/envs/1_desc_stat/paradox.acc.RData")
+# save(paradox.spd, file = "./data/envs/1_desc_stat/paradox.spd.RData")
+```
+
 
 
 ```{r}
@@ -106,46 +153,27 @@ df.spd <- df.spd[!df.spd$user_id %in% long_stops, ]
 ```
 
 ```{r}
-## Данные тестов психодиагностики
-sp_results <- read_xlsx("../../Все тесты/data/results/sp_results_impersonal.xlsx")
-science_types <- read.csv("../../Все тесты/data/results/science_types.csv")
-
-sp_results$science_type[sp_results$direction %in% science_types$direction[science_types$knowledge_field == "Natural Sciences"]] <- "Natural Sciences"
-sp_results$science_type[sp_results$direction %in% science_types$direction[science_types$knowledge_field == "Social and Humanitarian Sciences"]] <- "Social and Humanitarian Sciences"
-sp_results$science_type[sp_results$direction %in% science_types$direction[science_types$knowledge_field == "Technical Sciences"]] <- "Technical Sciences"
-
-df.acc <- merge(df.acc, select(sp_results, userid, gender, science_type, direction), by.x = "user_id", by.y = "userid", all.x = T)
-df.acc <- select(df.acc, 1:4, gender, science_type, direction, everything())
-df.acc <- df.acc[!is.na(df.acc$gender),]
-
-df.spd <- merge(df.spd, select(sp_results, userid, gender, science_type, direction), by.x = "user_id", by.y = "userid", all.x = T)
-df.spd <- select(df.spd, 1:4, gender, science_type, direction, everything())
-df.spd <- df.spd[!is.na(df.spd$gender),]
-```
-
-```{r}
 ## Длинный формат данных
 df <- rbind(df.acc, df.spd)
 
 df$gender <- factor(df$gender, labels = c("F", "M"))
-df$direction <- factor(df$direction)
 df$stage <- factor(df$stage, levels = c("accuracy", "speed"))
 df$user_id <- factor(df$user_id)
 ```
+
 
 ```{r}
 save(df, file = "./data/envs/1_desc_stat/df.RData")
 save(df.acc, file = "./data/envs/1_desc_stat/df.acc.RData")
 save(df.spd, file = "./data/envs/1_desc_stat/df.spd.RData")
 save(sp_results, file = "./data/envs/1_desc_stat/sp_results.RData")
-save(clickers, file = "./data/envs/1_desc_stat/clickers.RData")
-
 ```
-
 
 ```{r}
 sign_differences <- vector()
 ```
+
+
 
 
 # Описательные статистики
@@ -205,6 +233,241 @@ data.frame(
   frequency = as.vector(tab),
   percent = as.vector(round(prop.table(tab) * 100, 2))
 )
+```
+
+
+
+
+
+
+### time_total {.tabset .tabset-fade .tabset-pills}
+**Общее время выполнения**
+
+#### Descriptive stat
+
+```{r}
+data.frame(describe(df.spd$time_total, quant = c(0.25, 0.75)))
+```
+
+
+```{r fig.width=7, fig.height=4, results='asis'}
+plot_title <- "time_total"
+plot_list <- draw_plots_continuous(df.spd, var = df.spd$time_total, title = plot_title, filename = NULL, binwidth = NULL, bins = 15, alpha = 0.5, angle = 0)
+
+create_tabs(plot_list)
+```
+
+
+#### Normal test
+```{r}
+st <- shapiro.test(df.spd$time_total);print(st)
+check_normal_distribution(st)
+
+ks <- ks.test(df.spd$time_total, "pnorm");print(ks)
+check_normal_distribution(ks)
+```
+
+```{r results='asis'}
+p1 <- ggplot(df.spd, aes(sample = time_total)) +  geom_qq(col=main_color) + geom_qq_line() + labs(title = "QQPlot - time_total", tabname="QQPlot", filename=paste0(plot_title, "_QQplot"))
+
+create_tabs(list(p1))
+```
+
+
+#### Outliers
+```{r echo=FALSE}
+outliers <- get_outliers(df.spd, df.spd$time_total, 1.5)
+outliers <- select(outliers, 1:4, time_total, everything())
+outliers[order(outliers$time_total, decreasing = T),]
+outliers[order(outliers$time_total),]
+```
+
+
+
+
+
+
+### velocity_mean {.tabset .tabset-fade .tabset-pills}
+**Средняя гармоническая скорость**
+
+#### Descriptive stat
+
+```{r}
+data.frame(describe(df.spd$velocity_mean, quant = c(0.25, 0.75)))
+```
+
+
+```{r fig.width=7, fig.height=4, results='asis'}
+plot_title <- "velocity_mean"
+plot_list <- draw_plots_continuous(df.spd, var = df.spd$velocity_mean, title = plot_title, filename = NULL, binwidth = NULL, bins = 15, alpha = 0.5, angle = 0)
+
+create_tabs(plot_list)
+```
+
+
+#### Normal test
+```{r}
+st <- shapiro.test(df.spd$velocity_mean);print(st)
+check_normal_distribution(st)
+
+ks <- ks.test(df.spd$velocity_mean, "pnorm");print(ks)
+check_normal_distribution(ks)
+```
+
+```{r results='asis'}
+p1 <- ggplot(df.spd, aes(sample = velocity_mean)) +  geom_qq(col=main_color) + geom_qq_line() + labs(title = "QQPlot - velocity_mean", tabname="QQPlot", filename=paste0(plot_title, "_QQplot"))
+
+create_tabs(list(p1))
+```
+
+
+#### Outliers
+```{r echo=FALSE}
+outliers <- get_outliers(df.spd, df.spd$velocity_mean, 1.5)
+outliers <- select(outliers, 1:4, velocity_mean, everything())
+outliers[order(outliers$velocity_mean, decreasing = T),]
+outliers[order(outliers$velocity_mean),]
+```
+
+
+
+
+
+
+### missings_distance {.tabset .tabset-fade .tabset-pills}
+**Расстояние промахов от центра мишеней, пикс.**
+
+#### Descriptive stat
+
+```{r}
+data.frame(describe(df.spd$missings_distance, quant = c(0.25, 0.75)))
+```
+
+
+```{r fig.width=7, fig.height=4, results='asis'}
+plot_title <- "missings_distance"
+plot_list <- draw_plots_continuous(df.spd, var = df.spd$missings_distance, title = plot_title, filename = NULL, binwidth = NULL, bins = 15, alpha = 0.5, angle = 0)
+
+create_tabs(plot_list)
+```
+
+
+#### Normal test
+```{r}
+st <- shapiro.test(df.spd$missings_distance);print(st)
+check_normal_distribution(st)
+
+ks <- ks.test(df.spd$missings_distance, "pnorm");print(ks)
+check_normal_distribution(ks)
+```
+
+```{r results='asis'}
+p1 <- ggplot(df.spd, aes(sample = missings_distance)) +  geom_qq(col=main_color) + geom_qq_line() + labs(title = "QQPlot - missings_distance", tabname="QQPlot", filename=paste0(plot_title, "_QQplot"))
+
+create_tabs(list(p1))
+```
+
+
+#### Outliers
+```{r echo=FALSE}
+outliers <- get_outliers(df.spd, df.spd$missings_distance, 1.5)
+outliers <- select(outliers, 1:4, missings_distance, everything())
+outliers[order(outliers$missings_distance, decreasing = T),]
+outliers[order(outliers$missings_distance),]
+```
+
+
+
+
+
+
+### distance_total {.tabset .tabset-fade .tabset-pills}
+**Общая амплитуда**
+
+#### Descriptive stat
+
+```{r}
+data.frame(describe(df.spd$distance_total, quant = c(0.25, 0.75)))
+```
+
+
+```{r fig.width=7, fig.height=4, results='asis'}
+plot_title <- "distance_total"
+plot_list <- draw_plots_continuous(df.spd, var = df.spd$distance_total, title = plot_title, filename = NULL, binwidth = NULL, bins = 15, alpha = 0.5, angle = 0)
+
+create_tabs(plot_list)
+```
+
+
+#### Normal test
+```{r}
+st <- shapiro.test(df.spd$distance_total);print(st)
+check_normal_distribution(st)
+
+ks <- ks.test(df.spd$distance_total, "pnorm");print(ks)
+check_normal_distribution(ks)
+```
+
+```{r results='asis'}
+p1 <- ggplot(df.spd, aes(sample = distance_total)) +  geom_qq(col=main_color) + geom_qq_line() + labs(title = "QQPlot - distance_total", tabname="QQPlot", filename=paste0(plot_title, "_QQplot"))
+
+create_tabs(list(p1))
+```
+
+
+#### Outliers
+```{r echo=FALSE}
+outliers <- get_outliers(df.spd, df.spd$distance_total, 1.5)
+outliers <- select(outliers, 1:4, distance_total, everything())
+outliers[order(outliers$distance_total, decreasing = T),]
+outliers[order(outliers$distance_total),]
+```
+
+
+
+
+
+
+### pause_total {.tabset .tabset-fade .tabset-pills}
+**Общее время пауз**
+
+#### Descriptive stat
+
+```{r}
+data.frame(describe(df.spd$pause_total, quant = c(0.25, 0.75)))
+```
+
+
+```{r fig.width=7, fig.height=4, results='asis'}
+plot_title <- "pause_total"
+plot_list <- draw_plots_continuous(df.spd, var = df.spd$pause_total, title = plot_title, filename = NULL, binwidth = NULL, bins = 15, alpha = 0.5, angle = 0)
+
+create_tabs(plot_list)
+```
+
+
+#### Normal test
+```{r}
+st <- shapiro.test(df.spd$pause_total);print(st)
+check_normal_distribution(st)
+
+ks <- ks.test(df.spd$pause_total, "pnorm");print(ks)
+check_normal_distribution(ks)
+```
+
+```{r results='asis'}
+p1 <- ggplot(df.spd, aes(sample = pause_total)) +  geom_qq(col=main_color) + geom_qq_line() + labs(title = "QQPlot - pause_total", tabname="QQPlot", filename=paste0(plot_title, "_QQplot"))
+
+create_tabs(list(p1))
+```
+
+
+#### Outliers
+```{r echo=FALSE}
+outliers <- get_outliers(df.spd, df.spd$pause_total, 1.5)
+outliers <- select(outliers, 1:4, pause_total, everything())
+outliers[order(outliers$pause_total, decreasing = T),]
+outliers[order(outliers$pause_total),]
 ```
 
 
